created new Entity class and fixed old Entity class

--- a/src/main/resources/templates/cercaDomandaModificare.html
+++ b/src/main/resources/templates/cercaDomandaModificare.html
@@ -77,11 +77,17 @@ p {
 				<label for="idGioco"><b>Terza risposta</b></label> <input type="text"
 				placeholder="Inserisci la terza risposta" name="risposta3" id="risposta3" required>
 				
+				<label for="idGioco"><b>Quarta risposta</b></label> <input type="text"
+				placeholder="Inserisci la quarta risposta" name="risposta4" id="risposta4" required>
+				
 				<label for="idGioco"><b>Risposta corretta</b></label> <input type="text"
 				placeholder="Inserisci la risposta corretta" name="risposta_corretta" id="risposta_corretta" required>
 				
 					<label for="idGioco"><b>idTest</b></label> <input type="text"
 				placeholder="Inserisci l'id del test a cui appartiene" name="idTest" id="idTest" required>
+				
+					<label for="idGioco"><b>meta_info</b></label> <input type="text"
+				placeholder="Inserisci la meta info a cui appartiene" name="meta_info" id="meta_info" required>
 				
 			
 
