--- a/src/main/resources/templates/cercaStudioModificare.html
+++ b/src/main/resources/templates/cercaStudioModificare.html
@@ -59,10 +59,9 @@ p {
 			<h1 class="titolo">Cerca un gioco che vuoi modificare</h1>
 			<p style="text-align: center;">Inserisci l'id di un gioco che vuoi modificare e i nuovi dati</p>
 			<hr>
-
 			
 
-			<label for="idStudio"><b>idStudio</b></label> <input type="text"
+			<label for="idStudio"><b>idStudio</b></label> <input type="int"
 				placeholder="Inserisci id" name="idStudio" id="idStudio" required>
 
 			<label for="Titolo"><b>Titolo</b></label> <input type="text"
