fixed references to other file and added other visual's method in AmministratoreControl

--- a/src/main/resources/templates/cercaDomandaModificare.html
+++ b/src/main/resources/templates/cercaDomandaModificare.html
@@ -61,7 +61,7 @@ p {
 			<hr>
 
 			
-
+<!-- presumo che sia stato fatto un copia incolla della classe. capitr se bisogna modificare il for dei label-->
 			<label for="idGioco"><b>idDomanda</b></label> <input type="text"
 				placeholder="Inserisci id" name="idDomanda" id="idDomanda" required>
 
