--- a/src/main/resources/templates/eliminaProfilo.html
+++ b/src/main/resources/templates/eliminaProfilo.html
@@ -32,16 +32,13 @@ text-align:center;
 <body>
 
 	<div th:insert="fragments/header::header-block"></div>
-	<br>
-	<br>
-	
-			<br>
+	<br><br><br>
 
 	<p class="elimina">Il tuo profilo e stato eliminato correttamento</p>
 	<br>
 	<br>
 	<div style="text-align:center;">
-	<a href="home" class="elimina">Ritorna alla home</a>
+	<a href="home.html" class="elimina">Ritorna alla home</a>
 	</div>
 	<br>
 	<br>
