--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -55,7 +55,7 @@
 	<h2 class="domanda" style="font-size: 20px">Quanto ne sai di
 		privacy?</h2>
 	<div style="text-align: center;">
-		<a href="tp"><button class="bottoni pulsanticolori">Fai
+		<a href="tp.html"><button class="bottoni pulsanticolori">Fai
 				il test</button></a>
 
 		<!-- si mostra il login se l'utente non è già loggato 
