--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -44,7 +44,7 @@
 			</span> <br> <br>
 		
 			<div>
-				<a href="reg" class="reg" style="font-family: sans-serif; color:darkblue; font-weight:bold;">
+				<a href="reg.html" class="reg" style="font-family: sans-serif; color:darkblue; font-weight:bold;">
 					 Registrati</a>
 					</div>
 		</div>
