--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -39,7 +39,7 @@ text-align:center;
 	<p class="elimina"> Hai effettuato il logout </p>
 	<br> <br>
 	<div style="text-align:center;">
-	<a href="home" class="homeElimina">Ritorna alla home</a>
+	<a href="home.html" class="homeElimina">Ritorna alla home</a>
 	</div>
 	<br>
 	<br>
