--- a/src/main/resources/templates/profilo.html
+++ b/src/main/resources/templates/profilo.html
@@ -130,13 +130,13 @@ p {
 			<br> <br> <br>
 
 			<div class="pulsanti">
-				<a href="modificaProfilo" class="modEli">Modifica</a>
+				<a href="modificaProfilo.html" class="modEli">Modifica</a>
 				<br> <br>
-				<a href="eliminaProfilo" class="modEli">Elimina</a>
+				<a href="eliminaProfilo.html" class="modEli">Elimina</a>
 				<!-- collegare alert -->
 			</div>
 			<br>
-		<a href="home" class="modEli">Ritorna alla home</a>
+		<a href="home.html" class="modEli">Ritorna alla home</a>
 		</div>
 
 	</form>
