--- a/src/main/resources/templates/sdAmm.html
+++ b/src/main/resources/templates/sdAmm.html
@@ -146,13 +146,13 @@ p {
 			<br> <br> <br>
 
 			<div class="pulsanti">
-				<a href="nuovaDomanda" class="modEli">Aggiungi domanda</a>
+				<a href="nuovaDomanda.html" class="modEli">Aggiungi domanda</a>
 				<br>
-				<a href="cercaDomandaModificare" class="modEli">Modifica domanda</a>
+				<a href="cercaDomandaModificare.html" class="modEli">Modifica domanda</a>
 				<br>
-				<a href="cercaDomanda" class="modEli">Elimina domanda</a>
+				<a href="cercaDomanda.html" class="modEli">Elimina domanda</a>
 				<br>
-				<a href="home" class="modEli">Ritorno alla home</a>
+				<a href="home.html" class="modEli">Ritorno alla home</a>
 				<br> <br>
 				
 				
