--- a/src/main/resources/templates/sezioneGiochi.html
+++ b/src/main/resources/templates/sezioneGiochi.html
@@ -136,7 +136,7 @@ p {
 			
 			
 			<br>
-<a href="nuovoGioco" class="modEli">Gioca</a>
+<a href="nuovoGioco.html" class="modEli">Gioca</a>
 <br>
 
 		</div>
