--- a/src/main/resources/templates/sgAmm.html
+++ b/src/main/resources/templates/sgAmm.html
@@ -138,13 +138,13 @@ p {
 			
 			
 			<br>
-<a href="nuovoGioco" class="modEli" >Inserisci nuovo gioco</a>
+<a href="nuovoGioco.html" class="modEli" >Inserisci nuovo gioco</a>
 <br>
-<a href="cercaGiocodaModificare" class="modEli">Modifica</a> <!-- non funziona -->
+<a href="cercaGiocodaModificare.html" class="modEli">Modifica</a> <!-- non funziona -->
 <br>
-<a href="cercaGioco" class="modEli">Elimina</a>
+<a href="cercaGioco.html" class="modEli">Elimina</a>
 <br>
-<a href="home" class="modEli">Ritorno alla home</a>
+<a href="home.html" class="modEli">Ritorno alla home</a>
 		</div>
 
 	</form>
