--- a/src/main/resources/templates/ssAmm.html
+++ b/src/main/resources/templates/ssAmm.html
@@ -140,13 +140,13 @@ p {
 			
 			<br>
 	<div class="pulsanti">
-				<a href="nuovoStudio" class="modEli">Aggiungi nuovo argomento</a>
+				<a href="nuovoStudio.html" class="modEli">Aggiungi nuovo argomento</a>
 				<br>
-				<a href="cercaStudioModificare" class="modEli">Modifica argomento</a>
+				<a href="cercaStudioModificare.html" class="modEli">Modifica argomento</a>
 				<br>
-				<a href="cercaStudio" class="modEli">Elimina argomento</a>
+				<a href="cercaStudio.html" class="modEli">Elimina argomento</a>
 				<br>
-				<a href="home" class="modEli">Ritorno alla home</a>
+				<a href="home.html" class="modEli">Ritorno alla home</a>
 				<br> <br>
 				
 				
