--- a/src/main/resources/templates/stAmm.html
+++ b/src/main/resources/templates/stAmm.html
@@ -137,13 +137,13 @@ p {
 			<br> <br> <br>
 
 			<div class="pulsanti">
-				<a href="nuovoTest" class="modEli">Aggiungi nuovo test</a>
+				<a href="nuovoTest.html" class="modEli">Aggiungi nuovo test</a>
 				<br>
-				<a href="cercaTestModificare" class="modEli">Modifica test</a>
+				<a href="cercaTestModificare.html" class="modEli">Modifica test</a>
 				<br>
-				<a href="cercaTest" class="modEli">Elimina test</a>
+				<a href="cercaTest.html" class="modEli">Elimina test</a>
 				<br>
-				<a href="home" class="modEli">Ritorno alla home</a>
+				<a href="home.html" class="modEli">Ritorno alla home</a>
 				<br> <br>
 				
 				
