--- a/src/main/resources/templates/suAmm.html
+++ b/src/main/resources/templates/suAmm.html
@@ -147,9 +147,9 @@ p {
 			<br> <br> <br>
 
 			<div class="pulsanti">
-				<a href="cerca" class="modEli">Elimina utente</a>
+				<a href="cerca.html" class="modEli">Elimina utente</a>
 				<br>
-				<a href="home" class="modEli">Ritorno alla home</a>
+				<a href="home.html" class="modEli">Ritorno alla home</a>
 				<br> <br>
 				
 				
