--- a/src/main/resources/templates/visualizzaGioco.html
+++ b/src/main/resources/templates/visualizzaGioco.html
@@ -128,13 +128,13 @@ p {
 			<br> <br> <br>
 
 			<div class="pulsanti">
-				<a href="modificaGioco" class="modEli">Modifica</a>
+				<a href="modificaGioco.html" class="modEli">Modifica</a>
 				<br> <br>
-				<a href="eliminaGioco" class="modEli">Elimina</a>
+				<a href="eliminaGioco.html" class="modEli">Elimina</a>
 				<!-- collegare alert -->
 			</div>
 			<br>
-<a href="home" class="homereturn">Ritorna alla home</a>
+<a href="home.html" class="homereturn">Ritorna alla home</a>
 		</div>
 
 	</form>
