--- a/src/main/resources/templates/testEffettuato.html
+++ b/src/main/resources/templates/testEffettuato.html
@@ -25,7 +25,7 @@
 		<div class="pulsanti">
 				
 				<br> <br>
-				<a href="home" class="modEli">Ritorna alla home</a>
+				<a href="home.html" class="modEli">Ritorna alla home</a>
 			</div>
 	
 
